@@ -1,4 +1,10 @@
 #!/bin/sh
+#
+# Usage: make sure that appropriate signed update site is referenced in UPDATE_SITE,
+# and current directory is a download. Will create signed downloads in subdirectory.
+#
+
+UPDATE_SITE=$HOME/downloads-tm/updates/3.1milestones
 
 curdir=`pwd`
 cd `dirname $0`
@@ -15,6 +21,22 @@ SIGNED_JAR_SOURCE=${mydir}/eclipse_ext/tm
 OUTPUT=${curdir}/output.$$
 RESULT=${curdir}/result.$$
 TMP=${curdir}/tmp.$$
+BASEBUILDER=$HOME/ws2/eclipse
+
+# Provision update site into SIGNED_JAR_SOURCE
+if [ ! -d "${SIGNED_JAR_SOURCE}" ]; then
+  mkdir -p "${SIGNED_JAR_SOURCE}"
+fi
+${BASEBUILDER}/eclipse -nosplash \
+  -data install-ws -consolelog -clean \
+  -application org.eclipse.equinox.p2.repository.repo2runnable \
+  -source file:${UPDATE_SITE} \
+  -destination file:${SIGNED_JAR_SOURCE} \
+  -vmargs \
+    -Xms128M -Xmx256M -XX:PermSize=128M -XX:MaxPermSize=256M 
+retval=$?
+echo "result: ${retval}
+exit ${retval}
 
 if [ ! -d ${SIGNED_JAR_SOURCE}/server ]; then
   mkdir ${SIGNED_JAR_SOURCE}/server
